Closed
Bug 119109
Opened 24 years ago
Closed 24 years ago
Keyboard shortcuts not working
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Core
DOM: UI Events & Focus Handling
Tracking
()
VERIFIED
FIXED
People
(Reporter: Morten, Assigned: jag+mozilla)
References
Details
(Keywords: regression, smoketest)
Attachments
(1 file)
|
745 bytes,
patch
|
peterv
:
review+
|
Details | Diff | Splinter Review |
pressing ctrl-t while browser (anywhere) has focus does nothing.
neither does 'n' in mailnews, ctrl-n in browser and so on.
| Reporter | ||
Updated•24 years ago
|
Keywords: regression
Comment 1•24 years ago
|
||
On warpzilla 2002010911,
ctrl-t works as "reload" instead of ctrl-r,
ctrl-s works as "close tab" instead of ctrl-w,
ctrl-a still works fine...
Comment 3•24 years ago
|
||
*** Bug 119129 has been marked as a duplicate of this bug. ***
Comment 4•24 years ago
|
||
Ctrl+End in the mail compose plain text editor opens the browser instead of
movign the cursor.
Comment 5•24 years ago
|
||
In the mailnews message list pane, the arrow keys are acting like the space bar.
In mail compose, Ctrl+N is acting like the arrow keys.
| Assignee | ||
Comment 6•24 years ago
|
||
harish, we screwed up, but it's pretty simple to fix...
@@ -1018,9 +1017,8 @@
nsMemory::Free(str);
}
- nsAutoString key;
- if (!aCharCode) {
- aCharCode = &key;
+ nsAutoString key(aCharCode);
+ if (key.IsEmpty()) {
if (mType == NS_HANDLER_TYPE_XUL) {
mHandlerElement->GetAttr(kNameSpaceID_None, nsXBLAtoms::key, key);
if (key.IsEmpty())
Here you're doing the switch from using |aCharCode| as your working string to |key|.
@@ -1028,8 +1026,8 @@
}
}
- if (!(*aCharCode).IsEmpty()) {
- nsAutoString charCode(*aCharCode);
+ if (!key.IsEmpty()) {
+ nsAutoString charCode(aCharCode);
if ((mKeyMask & cShift) != 0)
ToUpperCase(charCode);
else
Then you correctly make that switch in the test (|!key.IsEmpty()|) but don't
make that switch in the assignment into |charCode| on the next line.
Fix is:
- nsAutoString charCode(aCharCode);
+ nsAutoString charCode(key);
Except I've optimized |charCode| away and am using |key| straight. See patch.
Assignee: aaronl → jaggernaut
| Assignee | ||
Comment 7•24 years ago
|
||
Comment 8•24 years ago
|
||
Comment on attachment 64277 [details] [diff] [review]
Fix
Woohoo for Peter (the other one)! r=peterv.
Attachment #64277 -
Flags: review+
| Assignee | ||
Comment 9•24 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 10•24 years ago
|
||
*** Bug 119171 has been marked as a duplicate of this bug. ***
Comment 11•24 years ago
|
||
*** Bug 119196 has been marked as a duplicate of this bug. ***
Comment 12•24 years ago
|
||
*** Bug 119213 has been marked as a duplicate of this bug. ***
Comment 13•24 years ago
|
||
*** Bug 119224 has been marked as a duplicate of this bug. ***
Comment 14•24 years ago
|
||
*** Bug 119227 has been marked as a duplicate of this bug. ***
Comment 15•24 years ago
|
||
*** Bug 119235 has been marked as a duplicate of this bug. ***
Comment 16•24 years ago
|
||
*** Bug 119248 has been marked as a duplicate of this bug. ***
Comment 17•24 years ago
|
||
re-opening - keyboard shortcuts still horked in 2002011003 builds
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 18•24 years ago
|
||
still asleep - 2002011009 builds fixed
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Comment 19•24 years ago
|
||
*** Bug 119281 has been marked as a duplicate of this bug. ***
Comment 20•24 years ago
|
||
*** Bug 119282 has been marked as a duplicate of this bug. ***
Comment 21•24 years ago
|
||
*** Bug 119269 has been marked as a duplicate of this bug. ***
Comment 22•24 years ago
|
||
*** Bug 119127 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 23•24 years ago
|
||
verified by me and daa
reopen if needed.
Status: RESOLVED → VERIFIED
Comment 24•24 years ago
|
||
*** Bug 119315 has been marked as a duplicate of this bug. ***
Comment 25•24 years ago
|
||
Just downloaded and installed win32 talkback build that's in /latest-trunk/:
mozilla-win32-talkback.zip 10-Jan-2002 13:01 9.7M
Keyboard shortcuts still don't work. Did the fix not get into today's win build?
Comment 26•24 years ago
|
||
The following worked for me:
/pub/mozilla/nightly/latest
mozilla-win32-installer.exe 10-Jan-2002 13:00 209k
Mozilla.exe 349,664 bytes
Comment 27•24 years ago
|
||
The one from 2002-01-10-12-trunk/ is
more recent. It now (re)works fine for me (w2k).
Comment 28•24 years ago
|
||
*** Bug 119393 has been marked as a duplicate of this bug. ***
Comment 29•24 years ago
|
||
*** Bug 119538 has been marked as a duplicate of this bug. ***
Updated•7 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•