Bug 119109: Accelerator keybindings are screwed up. Fixing today's wannabe blocker (simple typo in harish's ports bustage fix), r=peterv.